# diktor

./: Dockerfile  README.md  diktor.opam  diktor.opam.locked  dune-project
lib/: dune  parser.mly
