opam-version: "2.0"
name: "diktor"
version: "dev"
synopsis: "Diktor is an implementation of Orphos Programming Language frontend and IR interpreter, written in OCaml."
maintainer: "tomoaki3478@res.ac"
authors: ["Takezoe,Tomoaki"]
homepage: "https://orphos.res.ac/"
bug-reports: "https://github.com/orphos/diktor"
dev-repo: "git+https://github.com/orphos/diktor.git"
license: "Apache-2.0 WITH LLVM-exception"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "ocaml"
  "dune" {build}
  "ocamlformat" {build}
  "base"
  "sedlex"
  "menhir"
  "sqlite3"
  "zarith"
  "camomile"
  "batteries"
]
